[package]
name = "buddhabrot-wgpu"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gpu"
path = "src/gpu_main.rs"

[[bin]]
name = "image"
path = "src/image_main.rs"

[[bin]]
name = "merge"
path = "src/merge_main.rs"

[dependencies]
anyhow = "1.0.79"
bytemuck = { version = "1.14.1", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
flume = "0.11.0"
glob = "0.3.1"
itertools = "0.12.1"
log = "0.4.20"
num = "0.4.1"
png = "0.17.11"
pollster = "0.3.0"
rand = "0.8.5"
wgpu = "0.19.1"
zip = "0.6.6"
